admission/ValidatingAdmissionPolicy/policies/capabilities-add/ephemeralcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: capabilities-add-ephemeralcontainers
  annotations:
    kubeapt.io/uuid: "4a5eca81-78c0-448d-8a5a-f35d531bbedb"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
---
# Command: kubectl debug -n policy-test capabilities-add-ephemeralcontainers -it --image=busybox:1.36 --custom=policies/capabilities-add/ephemeralcontainers/deny-kubectl-debug-custom.yaml
